--- a/index.html
+++ b/index.html
@@ -9,25 +9,23 @@
 
 
   <header>
-    <a href="#" alt="logo">logo</a>
+    <img src="images/logo.svg" alt="logo">
     <h1>The Solar System</h1>
   </header>
 
   <nav>
-    <ol>
-      <li>Stars</li>
-      <li>Terrestrial planets</li>
-      <li>Gas giants</li>
-      <li>Dwarf planets</li>
-      <li>Asteroids</li>
-      <li>Comets</li>
-    </ol>
+    <a href="#Stars">Stars</a>
+    <a href="#Terrestrial-planets">Terrestrial planets</a>
+    <a href="#Gas-giants">Gas giants</a>
+    <a href="#Dwarf-planets">Dwarf planets</a>
+    <a href="#Asteroids">Asteroids</a>
+    <a href="#Comets">Comets</a>
   </nav>
 
   <main>
 
     <figure>
-      <a href="#" alt="banner">banner</a>
+      <img src="images/banner.svg" alt="banner">
       <figcaption>The Solar System—our home in the stars</figcaption>
     </figure>
 
