Fix nav tags in HTML file

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 </head>
 <body>
 
-
   <header>
     <img src="images/logo.svg" alt="logo">
     <h1>The Solar System</h1>
+    <nav>
+      <ul>
+        <li><a href="#Stars">Stars</a></li>
+        <li><a href="#Terrestrial-planets">Terrestrial planets</a></li>
+        <li><a href="#Gas-giants">Gas giants</a></li>
+        <li><a href="#Dwarf-planets">Dwarf planets</a></li>
+        <li><a href="#Asteroids">Asteroids</a></li>
+        <li><a href="#Comets">Comets</a></li>
+      </ul>
+    </nav>
   </header>
-
-  <nav>
-    <a href="#Stars">Stars</a>
-    <a href="#Terrestrial-planets">Terrestrial planets</a>
-    <a href="#Gas-giants">Gas giants</a>
-    <a href="#Dwarf-planets">Dwarf planets</a>
-    <a href="#Asteroids">Asteroids</a>
-    <a href="#Comets">Comets</a>
-  </nav>
 
   <main>
 
